syntax = "proto3";
option go_package = "sgsg/proto";
package proto;


import "auth.proto";
import "profile.proto";
import "note.proto";

message Empty {}

message Id {
    string id = 1;
}

message AuthResponse {
    string token = 1;
    User user = 2;
}

message StripeUrlResponse {
    string url = 1;
}

service Service {
    rpc Auth(Empty) returns (AuthResponse) {}

    rpc CreateStripeCheckout(Empty) returns (StripeUrlResponse) {}
    rpc CreateStripePortal(Empty) returns (StripeUrlResponse) {}

    rpc GetProfileByUserId(Empty) returns (Profile) {}
    rpc CreateProfile(Profile) returns (Profile) {}

    rpc GetNotesByUserId(Empty) returns (stream Note) {}
    rpc GetNoteById(Id) returns (Note) {}
    rpc CreateNote(Note) returns (Note) {}
    rpc DeleteNoteById(Id) returns (Empty) {}
}
